[package]
name = "epic"
version = "0.1.0"
authors = ["Joshua Benuck <joshua_benuck@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.56"
serde = { version = "1.0.114", features = [ "derive" ] }
reqwest = "0.10.6"
tokio = { version = "0.2.21", features = [ "macros" ] }
url = "2.1.1"
scraper = "0.12.0"
